--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 </a>
             </div>
             <div style="text-align: center; margin-top: 3rem; color: #666;">
-                <p>📍 House No 1397, Street No 03 I-11/2 Islamabad, Pakistan</p>
+                <p>📍 Pakistan</p>
             </div>
         </div>
     </section>
